--- a/example/src/pages/gate.less
+++ b/example/src/pages/gate.less
@@ -1,4 +1,4 @@
-.gate {
+#gate {
   background-image: url(../assets/images/bd.svg);
   background-repeat: no-repeat;
   background-position: center 110px;
