--- a/example/src/pages/gate.less
+++ b/example/src/pages/gate.less
@@ -4,4 +4,12 @@
   background-position: center 110px;
   background-size: 100%;
   min-height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#gate .form {
+  margin: 32px 16px;
 }
