--- a/example/src/layouts/basic.less
+++ b/example/src/layouts/basic.less
@@ -45,6 +45,10 @@
     }
   }
 
+  .menu svg path {
+    fill: white;
+  }
+
   .header {
     background: #fff;
     height: 48px;
@@ -57,6 +61,13 @@
 
   .content {
     padding: 16px;
+
+    .loading {
+      padding: 32px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
     .page-header {
       margin: -16px -16px 0 -16px;
