--- a/example/src/layouts/app.less
+++ b/example/src/layouts/app.less
@@ -1,3 +1,9 @@
 #app {
   min-height: 100vh;
+  & > .loading {
+    height: 100vh;
+    padding: 64px;
+    display: flex;
+    justify-content: center;
+  }
 }
