--- a/example/src/layouts/basic.less
+++ b/example/src/layouts/basic.less
@@ -53,6 +53,7 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 1px 4px rgb(0 21 41 / 8%);
+    z-index: 99999;
 
     .trigger {
       font-size: 18px;
@@ -84,17 +85,18 @@
   }
 
   .content {
-    padding: 16px;
-
     .loading {
-      padding: 32px;
+      padding: 64px;
       display: flex;
       justify-content: center;
-      align-items: center;
     }
 
     .page-header {
-      margin: -16px -16px 0 -16px;
+      background-color: white;
+    }
+
+    .card {
+      margin: 24px;
     }
   }
 }
